[package]
name = "yarm"
version = "0.1.0"
authors = ["Russell Harmon <eatnumber1@gmail.com>"]

[dependencies]
treexml = "0.7"
google-drive3 = "*"
# This project intentionally uses an old version of Hyper. See
# https://github.com/Byron/google-apis-rs/issues/173 for more
# information.
hyper = "^0.10"
hyper-rustls = "^0.6"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^1.0"
